updates site url and baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: "Cozinha Nômade"
 
 # URL
-url: ''
-baseurl: '/cozinhanomade'
+url: 'http://acozinhanomade.ml'
+baseurl: ''
 permalink: :title/
 include: ['_pages']
 collections:
