fixes bugs in config and glossario

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ future: false
 defaults:
   -
     scope:
-      path: ""
+      path: "_pages"
       type: "pages"
     values:
       layout: "page"
